<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intents"
        android:textColor="@color/white"
        android:background="@color/teal_700"
        android:textSize="@dimen/intents_size"
        android:padding="@dimen/vertical_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/mail"
        android:padding="@dimen/vertical_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/textview"
        android:layout_marginTop="@dimen/margintop"
        android:hint="@string/enter_e_mail"
        android:textSize="@dimen/themesize"
        android:layout_marginHorizontal="@dimen/marginhor"/>
    <EditText
        android:id="@+id/theme"
        android:padding="@dimen/vertical_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/mail"
        android:layout_marginTop="@dimen/margintop"
        android:hint="@string/theme"
        android:textSize="@dimen/themesize"
        android:layout_marginHorizontal="@dimen/marginhor"/>
    <EditText
        android:id="@+id/message"
        android:padding="@dimen/vertical_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/theme"
        android:layout_marginTop="@dimen/margintop"
        android:hint="@string/message"
        android:textSize="@dimen/themesize"
        android:layout_marginHorizontal="@dimen/marginhor"/>
    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:textSize="@dimen/send_size"
        app:layout_constraintTop_toBottomOf="@id/message"
        android:layout_marginTop="@dimen/margintop"
        android:layout_marginHorizontal="@dimen/marginhor"
        android:padding="@dimen/vertical_padding"
        android:backgroundTint="@color/teal_700"/>
    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="@dimen/send_size"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/margintop"
        android:layout_marginHorizontal="@dimen/marginhor"
        android:padding="@dimen/vertical_padding"
        android:backgroundTint="@color/teal_700"/>
</androidx.constraintlayout.widget.ConstraintLayout>