<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">
    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/textview_mail"
        app:layout_constraintTop_toTopOf="@id/textview_mail"
        app:layout_constraintBottom_toBottomOf="@id/textview_mail"
        android:text="@string/back"
        android:textSize="28sp"
        android:textStyle="bold"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/textview_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mail"
        android:textSize="@dimen/big_text"
        android:textColor="@color/black"
        android:gravity="center"
        android:textStyle="bold"
        android:paddingVertical="@dimen/vertical_padding"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/from_container"
        app:layout_constraintTop_toBottomOf="@id/textview_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/from"
            android:textColor="@color/black"
            android:layout_width="@dimen/width"
            app:layout_constraintStart_toStartOf="@id/from_container"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textSize="@dimen/big_text"
            android:layout_margin="@dimen/vertical_padding"
            app:layout_constraintTop_toTopOf="@id/from_container"
            app:layout_constraintBottom_toBottomOf="@id/from_container"
            android:padding="@dimen/vertical_padding"/>
        <TextView
            android:id="@+id/from_email"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toEndOf="@id/from"
            android:layout_height="wrap_content"
            android:text="@string/geektech_gmail_com"
            android:textSize="@dimen/middle"
            app:layout_constraintTop_toTopOf="@id/from_container"
            app:layout_constraintBottom_toBottomOf="@id/from_container"
            android:layout_margin="@dimen/vertical_padding"
            android:padding="@dimen/vertical_padding"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/to_container"
        app:layout_constraintTop_toBottomOf="@id/from_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/to"
            android:layout_width="@dimen/width"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/to_container"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textSize="@dimen/big_text"
            android:layout_margin="@dimen/vertical_padding"
            app:layout_constraintTop_toTopOf="@id/to_container"
            app:layout_constraintBottom_toBottomOf="@id/to_container"
            android:padding="@dimen/vertical_padding"/>
        <EditText
            android:id="@+id/edittext_email"
            android:layout_width="wrap_content"
            app:layout_constraintStart_toEndOf="@id/to"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/toemail"
            android:textSize="@dimen/middle"
            app:layout_constraintTop_toTopOf="@id/to_container"
            app:layout_constraintBottom_toBottomOf="@id/to_container"
            android:layout_margin="@dimen/vertical_padding"
            android:padding="@dimen/vertical_padding"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <EditText
        android:id="@+id/edittext_theme"
        android:padding="@dimen/vertical_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/to_container"
        android:layout_marginTop="@dimen/vertical_padding"
        android:hint="@string/enter_theme"
        android:textSize="@dimen/themesize"
        android:layout_marginHorizontal="@dimen/marginhor"/>
    <EditText
        android:id="@+id/edittext_message"
        android:padding="@dimen/vertical_padding"
        android:layout_width="match_parent"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/edittext_theme"
        android:layout_marginTop="@dimen/vertical_padding"
        android:hint="@string/enter_message"
        android:textSize="@dimen/themesize"
        android:layout_marginHorizontal="@dimen/marginhor"/>
</androidx.constraintlayout.widget.ConstraintLayout>